# ecomm-pdt-assistant

./: .gitignore  get_lib_versions.py  main.py  pyproject.toml  requirements.txt  scrapper_ui.py
data/: product_reviews.csv
notebooks/: test.ipynb
product_assistant/etl/: data_ingestion.py  data_scrapper.py
product_assistant/prompt_library/: prompts.py
product_assistant/retrieval/: retriever.py
product_assistant/workflow/: agentic_rag_workflow.py
