[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "ecomm-pdt-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

authors = [{ name = "Bhagyashree Srinivasan"}]
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["product_assistant"]
include = ["ECOMM-PDT-ASSISTANT*"]